--- a/FlickrSearchAppUITests/Info.plist
+++ b/FlickrSearchAppUITests/Info.plist
@@ -20,5 +20,9 @@
 	<string>1</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
