--- a/FlickrSearchAppUITests/Info.plist
+++ b/FlickrSearchAppUITests/Info.plist
@@ -21,8 +21,6 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<array/>
 </dict>
 </plist>
